--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
+    "start": "webpack serve --static src --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
