--- a/4-react-redux-minimum/4-4-2.redux-promise/package.json
+++ b/4-react-redux-minimum/4-4-2.redux-promise/package.json
@@ -14,10 +14,12 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
